# snek-pippet

./: .gitignore  Cargo.toml  README.md  requirements.txt
snek-pippet/: snek_pippet.py
src/: camera.rs  lib.rs
