[package]
name = "pipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pipper"
crate-type = ["cdylib"]

[dependencies]
nokhwa = { version = "0.10.4", features = ["input-native"] }
pyo3 = { version = "0.18.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
